# simple_goal_sender

./: CMakeLists.txt  package.xml
launch/: send_goal.launch
scripts/: send_goal.py
